# ps_ardrone

./: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  manifest.xml  package.xml  package.xml~
object/: objects.xml  objects.xml~
src/: ardrone.cpp  ardrone.h  cameracontroller.cpp  cameracontroller.h  communicationcontroller.cpp  communicationcontroller.h  const.h  detectiontool.cpp  detectiontool.h  fly.cpp  fly.cpp~  hsv.cpp  imageobject.cpp  imageobject.h  land.cpp  land.cpp~  listener.cpp  listener.cpp~  main.cpp  navdatacontroller.cpp  navdatacontroller.h  objectdata.cpp  objectdata.h  objectdetection.cpp  objectdetection.h  pugixml.cpp  reset.cpp  reset.cpp~  takeoff.cpp  takeoff.cpp~
